[package]
name = "sputnikvm-network-gallactic"
version = "0.1.0"
Description = "Gallactic patches for sputnikvm"
authors = ["Harish <harishbm34@gmail.com>"]

[dependencies]
sputnikvm = { version = "0.10", path = "../..", default-features = false }
sputnikvm-precompiled-bn128 = { version = "0.10", path = "../../precompiled/bn128", default-features = false}
sputnikvm-precompiled-modexp = { version = "0.10", path = "../../precompiled/modexp", default-features = false }
sputnikvm-precompiled-edverify = { version = "0.1.0", path = "../../precompiled/edverify", default-features = false }
etcommon-bigint = { version = "0.2", default-features = false }

[features]
default = ["std", "c-secp256k1"]
rlp = ["etcommon-bigint/rlp"]
c-secp256k1 = ["sputnikvm/c-secp256k1", "sputnikvm-precompiled-bn128/c-secp256k1", "sputnikvm-precompiled-modexp/c-secp256k1", "sputnikvm-precompiled-edverify/c-secp256k1"]
rust-secp256k1 = ["sputnikvm/rust-secp256k1", "sputnikvm-precompiled-bn128/rust-secp256k1", "sputnikvm-precompiled-modexp/rust-secp256k1", "sputnikvm-precompiled-edverify/rust-secp256k1"]
std = ["sputnikvm/std"]
