[package]
name = "sputnikvm-precompiled-edverify"
version = "0.1.0"
description = "edverify precompiled contracts for Sputnikvm"
authors = ["Harish <harishbm34@gmail.com>"]

[dependencies]
sputnikvm = { version = "0.10", path = "../..", default-features = false }
etcommon-bigint = { version = "0.2", default-features = false }
num-bigint = "0.1"
bn-plus = { version = "0.4" }
rust-crypto = "^0.2"
ed25519 = "0.0.0"
etcommon-hexutil = "0.2.3"

[features]
default = ["std", "c-secp256k1"]
rlp = ["etcommon-bigint/rlp"]
c-secp256k1 = ["sputnikvm/c-secp256k1"]
rust-secp256k1 = ["sputnikvm/rust-secp256k1"]
std = ["sputnikvm/std"]

